# fun-stuff

./: README.md
ascii/: README.md  draw_image.cpp  draw_image.py
galaxies/: README.md  galaxies.py
mandelbrot/: .gitignore  CMakeLists.txt  MandelbrotASCII.cpp  MandelbrotImage.cpp  README.md
